--- a/index.html
+++ b/index.html
@@ -1,119 +1,202 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<title>Vijay Papers</title>
-		<script src="http://code.jquery.com/jquery-1.10.2.js" aysnc></script>
-		<script src="http://code.jquery.com/ui/1.10.3/jquery-ui.js" aysnc></script>
-		<style type="text/css">
-			* {
-			  	margin: 0;
-			  	padding: 0;
-			  	border: none;
-			}
-			html, body {
-				height: 100%;
-				width: 100%;
-				margin: 0;
-				padding: 0;
-				border: 0;
-				font-family: 'Fira Sans', sans-serif;
-				background: #edecec;
-			}
-			.container {
-				/*background: #f9f9f9;*/
-				width: 100%;
-				height: 100%;
-			}
-			.overlay {
-					top: 0;
-					left: 0;
-					bottom: 0;
-					right: 0;
-					width: 100%;
-					height: 100%;
-					background-color: rgba(0, 0, 0, 0.4);
-	  				position: fixed;
-	  				z-index: 99990;
-			}
-			.hide {
-				display: none;
-			}
-			header {
+<head>
+	<title>Vijay Papers</title>
+	<script src="http://code.jquery.com/jquery-1.10.2.js" aysnc></script>
+	<script src="http://code.jquery.com/ui/1.10.3/jquery-ui.js" aysnc></script>
+	<style type="text/css">
+		* {
+		  	margin: 0;
+		  	padding: 0;
+		  	border: none;
+		}
+		html, body {
+			height: 100%;
+			width: 100%;
+			margin: 0;
+			padding: 0;
+			border: 0;
+			font-family: 'Fira Sans', sans-serif;
+			background: #edecec;
+		}
+		.container {
+			/*background: #f9f9f9;*/
+			width: 100%;
+			height: 100%;
+		}
+		.overlay {
 				top: 0;
-				height: 4em;
-				z-index: 99990;
-			}
-			footer {
+				left: 0;
 				bottom: 0;
-				height: 3em;
-			}
-			.mast {
+				right: 0;
 				width: 100%;
-				z-index: 500;
-				font-size: 14px;
-				background: #fff;
-				color: rgba(0,0,0,0.3);
-				letter-spacing: -0.02em;
-			 	font-weight: 400;
-			 	font-style: normal;
-			 	box-sizing: border-box;
-			 	transition: 200ms background-color,200ms color;
-			 	-webkit-animation: fade-up-in 175ms;
-	  			animation: fade-up-in 175ms;
-	  			padding: 0 16px 0 16px;
-	  			position: fixed;
-				box-shadow: 0 0 1px rgba(0,0,0,0.15);
-			}
-			.hamburger {
-				width: 25px;
-				height: 25px;
-				background: #f2f2f2;
-				position: relative;
-				left: 100%;
-				top: 50%;
-				transform: translate(-100%,-50%);
-				-webkit-transform: translate(-100%,-50%);
-				-moz-transform: translate(-100%,-50%);
-				cursor: pointer;
-				z-index: 99997;
-			}
-			.hamburger:hover {
-				background: #e4352c;
-			}
-			.contact {
-				width: 400px;
-				height: 400px;
-				margin: 4em 16px 0 0;
-				background: #bababa;
-				z-index: 99997;
-				float: right;
-			}
-			footer p {
-				line-height: 3em;
-				color: rgba(0,0,0,0.6);
-			}
-		</style>
-	</head>
-	<body>
-		<div class="container">
-			<!--<div class="overlay hide"></div>-->
-			<header class="mast">
-				<div class="hamburger"></div>
-			</header>
-			<div class="contact hide"></div>
-			<div class="content"></div>
-			<footer class="mast">
-				<p>&copy; 2015 | Vijay Papers | All rights reserved.</p>
-			</footer>
+				height: 100%;
+				background-color: rgba(0, 0, 0, 0.4);
+  				position: fixed;
+  				z-index: 99990;
+		}
+		.hide {
+			display: none;
+		}
+		.mast {
+			width: 100%;
+			z-index: 500;
+			font-size: 14px;
+			background: #fff;
+			color: rgba(0,0,0,0.3);
+			letter-spacing: -0.02em;
+		 	font-weight: 400;
+		 	font-style: normal;
+		 	box-sizing: border-box;
+		 	transition: 200ms background-color,200ms color;
+		 	-webkit-animation: fade-up-in 175ms;
+  			animation: fade-up-in 175ms;
+  			padding: 0 16px 0 16px;
+			box-shadow: 0 0 1px rgba(0,0,0,0.15);
+		}
+		/* Header */
+		header {
+			top: 0;
+			height: 4em;
+			z-index: 99990;
+			position: fixed;
+		}
+		.hamburger {
+			width: 25px;
+			height: 25px;
+			background: #f2f2f2;
+			position: relative;
+			left: 100%;
+			top: 50%;
+			transform: translate(-100%,-50%);
+			-webkit-transform: translate(-100%,-50%);
+			-moz-transform: translate(-100%,-50%);
+			cursor: pointer;
+			z-index: 99997;
+		}
+		.hamburger:hover {
+			background: #bababa;
+		}
+
+		/* Footer */	
+		footer {
+			bottom: 0;
+			height: 3em;
+			position: relative;
+		}
+		footer p {
+			line-height: 3em;
+			color: rgba(0,0,0,0.6);
+		}
+
+		/* Contact */
+		.contact {
+			width: 25em;
+			height: 31em;
+			margin: 4em 16px 0 0;
+			background: #fff;
+			z-index: 99997;
+			right: 0;
+			position: fixed;
+		}
+		.contact .details {
+			width: 100%;
+			height: 100%;
+			padding: 10px 10px 10px 10px;
+		}
+		.contact .details h3 {
+			font-size: 40px;
+		}
+		.details .form-row {
+			margin-bottom: 20px;
+		}
+		.form-row label {
+			margin: 0 0 10px;
+			line-height: 30px;	
+		}
+		textarea {
+			resize: none;
+		}
+
+		/* Content */
+		section {
+			width: 100%;
+			position: relative;
+		}
+		.about {
+			background: #DDDAD2;
+			color: #f2f2f2;
+			height: 32em;
+		}
+		.products {
+			background: #383735;
+			color: #f2f2f2;
+			height: 32em;
+		}
+	</style>
+</head>
+<body>
+	<div class="container">
+		<!--<div class="overlay hide"></div>-->
+		<header class="mast">
+			<div class="menu">
+				<span>About</span>
+				<span>Products</span>
+			</div>
+			<div class="hamburger"></div>
+		</header>
+		<div class="contact hide">
+			<!-- <div class="details">
+				<h3>Contact</h3>
+				<form method="post">
+					<div class="form-row">
+						<label>Name *</label> <br/>
+						<input type="text" name="name" required />
+					</div>
+					<div class="form-row">
+						<label>Email *</label> <br/>
+						<input type="email" name="email" required />
+					</div>
+					<div class="form-row">
+						<label>Message *</label> <br/>
+						<textarea name="message" cols="40" rows="10"></textarea>
+					</div>
+					<div class="form-row">
+						<label>We need to verify you are human * <br/>How much is 3 + 5 ?</label>
+						<input type="number" name="human" />
+					</div>
+				</form>
+			</div> -->
 		</div>
-		<script type="text/javascript">
-			$(window).load(function() {
-				$(".hamburger").click(function(){
-					//$(".overlay").toggleClass("hide");
-					$(".contact").toggleClass("hide");
-					console.log("clicked");
-				});
+		<div class="content">
+			<section class="about">
+				
+			</section>
+			<section class="products">
+				<div class="paper"></div>
+				<div class="board"></div>
+			</section>
+		</div>
+		<footer class="mast">
+			<p>&copy; 2015 | Vijay Papers | All rights reserved.</p>
+		</footer>
+	</div>
+	<script type="text/javascript">
+		$(window).load(function() {
+			var clicked = 0;
+			$(".hamburger").click(function(){
+				//$(".overlay").toggleClass("hide");
+				$(".contact").toggleClass("hide");
+				if(clicked == 0){
+					clicked = 1;
+					$(".hamburger").css("background-color","#bababa");
+				}
+				else {
+					clicked = 0;
+					$(".hamburger").css("background-color","#f2f2f2");
+				}
 			});
-		</script>
-	</body>
+		});
+	</script>
+</body>
 </html>
