Commenting menu in header

--- a/index.html
+++ b/index.html
@@ -139,10 +139,10 @@
 	<div class="container">
 		<!--<div class="overlay hide"></div>-->
 		<header class="mast">
-			<div class="menu">
-				<span>About</span>
-				<span>Products</span>
-			</div>
+			<!--<div class="menu">-->
+			<!--	<span>About</span>-->
+			<!--	<span>Products</span>-->
+			<!--</div>-->
 			<div class="hamburger"></div>
 		</header>
 		<div class="contact hide">
