--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	<script src="http://code.jquery.com/jquery-1.10.2.js" aysnc></script>
 	<script src="http://code.jquery.com/ui/1.10.3/jquery-ui.js" aysnc></script>
 	<style type="text/css">
+		/* Comman/Generic */
 		* {
 		  	margin: 0;
 		  	padding: 0;
@@ -19,24 +20,13 @@
 			font-family: 'Fira Sans', sans-serif;
 			background: #edecec;
 		}
+		.hide {
+			display: none;
+		}
 		.container {
 			/*background: #f9f9f9;*/
 			width: 100%;
 			height: 100%;
-		}
-		.overlay {
-				top: 0;
-				left: 0;
-				bottom: 0;
-				right: 0;
-				width: 100%;
-				height: 100%;
-				background-color: rgba(0, 0, 0, 0.4);
-  				position: fixed;
-  				z-index: 99990;
-		}
-		.hide {
-			display: none;
 		}
 		.mast {
 			width: 100%;
@@ -53,6 +43,12 @@
   			animation: fade-up-in 175ms;
   			padding: 0 16px 0 16px;
 			box-shadow: 0 0 1px rgba(0,0,0,0.15);
+		}
+		a {
+			text-decoration: none;
+		}
+		.active {
+			color: #e4352c;
 		}
 		/* Header */
 		header {
@@ -76,6 +72,28 @@
 		}
 		.hamburger:hover {
 			background: #bababa;
+		}
+		.logo {
+			  height: 4em;
+			  padding: 0 16px 0 16px;
+			  width: 200px;
+			  background-color: red;
+			  float: left;
+			  margin-right: 20px;
+		}
+		.menu {
+			position: relative;
+			line-height: 4em;
+			color: #000;
+		}
+		.menu span {
+			float: left;
+			font-size: 16px;
+			padding: 0 40px 0 40px;
+			cursor: pointer;
+		}
+		.menu span:hover {
+			color: #e4352c;
 		}
 
 		/* Footer */	
@@ -137,12 +155,12 @@
 </head>
 <body>
 	<div class="container">
-		<!--<div class="overlay hide"></div>-->
 		<header class="mast">
-			<!--<div class="menu">-->
-			<!--	<span>About</span>-->
-			<!--	<span>Products</span>-->
-			<!--</div>-->
+			<div class="logo"></div>
+			<div class="menu">
+				<span class="mAbout active">About</span>
+				<span class="mProducts">Products</span>
+			</div>
 			<div class="hamburger"></div>
 		</header>
 		<div class="contact hide">
@@ -185,7 +203,6 @@
 		$(window).load(function() {
 			var clicked = 0;
 			$(".hamburger").click(function(){
-				//$(".overlay").toggleClass("hide");
 				$(".contact").toggleClass("hide");
 				if(clicked == 0){
 					clicked = 1;
@@ -195,6 +212,20 @@
 					clicked = 0;
 					$(".hamburger").css("background-color","#f2f2f2");
 				}
+			});
+			$("header .mAbout").click(function(){
+				$(window).scrollTop($(".content section.about").offset().top);
+				if($(".menu .mProducts").hasClass("active")){
+					$(".menu .mProducts").removeClass("active");
+				}
+				$(".menu .mAbout").addClass("active");
+			});
+			$("header .mProducts").click(function(){
+				$(window).scrollTop($(".content section.products").offset().top);
+				if($(".menu .mAbout").hasClass("active")){
+					$(".menu .mAbout").removeClass("active");
+				}
+				$(".menu .mProducts").addClass("active");
 			});
 		});
 	</script>
