--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 		}
 		.menu span {
 			float: left;
-			font-size: 16px;
+			font-size: 1.4em;
 			padding: 0 40px 0 40px;
 			cursor: pointer;
 		}
