--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
 			width: 100%;
 			z-index: 500;
 			background: #fff;
+			font-size: 14px;
 			color: rgba(0,0,0,0.3);
 			letter-spacing: -0.02em;
 		 	font-weight: 400;
