--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
 		$(window).load(function() {
 			var clicked = 0;
 			$(".hamburger").click(function(){
-				$(".contact").toggleClass("hide");
+				$(".contact").removeClass("hide");
 				if(clicked == 0){
 					clicked = 1;
 					$(".hamburger").css("background-color","#bababa");
@@ -213,14 +213,18 @@
 				}
 			});
 			$("header .mAbout").click(function(){
-				$(window).scrollTop($(".content section.about").offset().top);
+				$('html,body').animate({
+					scrollTop: $(".content section.about").offset().top},
+					1000);
 				if($(".menu .mProducts").hasClass("active")){
 					$(".menu .mProducts").removeClass("active");
 				}
 				$(".menu .mAbout").addClass("active");
 			});
 			$("header .mProducts").click(function(){
-				$(window).scrollTop($(".content section.products").offset().top);
+				$('html,body').animate({
+					scrollTop: $(".content section.products").offset().top},
+					1000);
 				if($(".menu .mAbout").hasClass("active")){
 					$(".menu .mAbout").removeClass("active");
 				}
