--- a/index.html
+++ b/index.html
@@ -202,14 +202,19 @@
 		$(window).load(function() {
 			var clicked = 0;
 			$(".hamburger").click(function(){
+				hamburger").click(function(){
 				$(".contact").removeClass("hide");
 				if(clicked == 0){
 					clicked = 1;
 					$(".hamburger").css("background-color","#bababa");
+					$(".contact").addClass("fadeIn");
+					$(".contact").removeClass("fadeOut");
 				}
 				else {
 					clicked = 0;
 					$(".hamburger").css("background-color","#f2f2f2");
+					$(".contact").addClass("fadeOut");
+					$(".contact").removeClass("fadeIn");
 				}
 			});
 			$("header .mAbout").click(function(){
