--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 	<title>Vijay Papers</title>
 	<script src="http://code.jquery.com/jquery-1.10.2.js" aysnc></script>
 	<script src="http://code.jquery.com/ui/1.10.3/jquery-ui.js" aysnc></script>
+	<link rel="stylesheet" type="text/css" href="animate.css">
 	<style type="text/css">
 		/* Comman/Generic */
 		* {
