--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
 			</div>
 			<div class="hamburger"></div>
 		</header>
-		<div class="contact hide">
+		<div class="contact animated hide">
 			<!-- <div class="details">
 				<h3>Contact</h3>
 				<form method="post">
