--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 	<div class="container">
 		<header class="mast">
 			<div class="logo animated hide">
-				<img src="logo.png" height="60" width="60">
+				<img src="https://cloud.githubusercontent.com/assets/12879826/10813154/059e4c80-7dda-11e5-92a0-aecacef51d2a.png" height="60" width="60" alt="logo">
 			</div>
 			<div class="hamburger">
 			</div>
